# airom

./: .gitignore  .goreleaser.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  NOTICE  README.md  SECURITY.md  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  release-pypi.yml  release.yml
docs/: ARCHITECTURE.md  cli.md  cve.md  mapping.md  risks.md  rule-schema.md
docs-site/: README.md  docs.json  index.mdx  installation.mdx  quickstart.mdx
docs-site/ci/: exit-codes.mdx  github-actions.mdx
docs-site/concepts/: aibom.mdx  compliance.mdx  confidence.mdx  cve.mdx  evidence.mdx
docs-site/output/: cyclonedx.mdx  formats.mdx  sarif.mdx
docs-site/reference/: cli.mdx  configuration.mdx
docs-site/rules/: overview.mdx  writing-rules.mdx
docs-site/scanning/: container-images.mdx  filesystem.mdx  kubernetes.mdx  repository.mdx
internal/app/: config.go  embed.go  gate_test.go  policy.go  rules.go  run.go  run_test.go  scan.go
internal/assemble/: assemble.go  assemble_test.go
internal/classify/: classify.go  classify_test.go
internal/cli/: cli.go  commands.go  detectors.go  dev.go  dev_templates.go  flags.go  rules.go
internal/detectors/all/: all.go  gen.go
internal/detectors/dataset/: dataset.go  dataset_test.go  signals.go
internal/detectors/dataset/testdata/: agent-a011eb9a45fe1d5a9.jsonl  colors.csv  decoy.csv  findings.golden.json  grib2_table_4_2_0_0.csv  open-telemetry-metrics.2026-07-17.csv  oui.csv  reviews.csv  sample.arrow  sample.parquet  train.jsonl
internal/detectors/gosrc/: gosrc.go  gosrc_test.go
internal/detectors/gosrc/testdata/: chat.go  decoy.go  findings.golden.json  rag.go
internal/detectors/infra/: compose.go  dockerfile.go  infra.go  infra_test.go  scope_test.go
internal/detectors/manifest/: cargo.go  catalog.go  csproj.go  doc.go  fuzz_test.go  gomod.go  gradle.go  manifest_test.go  maven.go  packagejson.go  packagejson_test.go  parse.go  pyproject.go  requirements.go
internal/detectors/manifest/testdata/cargo/: Cargo.toml  decoy.txt  findings.golden.json
internal/detectors/manifest/testdata/pyproject/pep621/: pyproject.toml
internal/detectors/manifest/testdata/pyproject/poetry/: pyproject.toml
internal/detectors/modelfile/: fuzz_test.go  gguf.go  gguf_test.go  onnx.go  onnx_test.go  risks.go  safetensors.go  safetensors_test.go  shared.go
internal/detectors/modelfile/testdata/: gen.go
internal/detectors/modelfilex/: detectors_unit_test.go  fuzz_test.go  hdf5.go  modelfilex.go  modelfilex_test.go  pickle.go  pickle_test.go  risks.go  savedmodel.go  tensorrt.go  tflite.go  torch.go
internal/detectors/project/: adapter.go  common.go  configbind.go  hfdir.go  project_test.go  raglink.go
internal/detectors/prompt/: prompt.go  prompt_test.go
internal/detectors/prompt/testdata/: decoy.md  findings.golden.json  summarize.prompt
internal/dispatch/: dispatch.go  dispatch_test.go
internal/engine/: catalog.go  catalog_test.go  engine.go  engine_test.go
internal/filectx/: filectx.go  filectx_test.go
internal/ruleengine/: matcher.go  ruleengine.go  ruleengine_test.go
internal/ruleengine/lexer/: doc.go  fuzz_test.go  langs.go  lexer.go  lexer_test.go
internal/ruleengine/ruletest/: ruletest.go
internal/rulesync/: airom-rules.pub  client.go  doc.go  extract.go  rulesync.go  rulesync_test.go  store.go  verify.go
internal/source/: types.go
internal/source/dirsource/: dirsource.go  dirsource_test.go
internal/source/gitsource/: doc.go  gitsource.go  gitsource_test.go
internal/source/imagesource/: imagesource.go  imagesource_test.go  squash.go  squash_security_test.go
internal/source/k8ssource/: k8ssource.go  k8ssource_test.go
internal/writer/: writer.go
internal/writer/sarifw/: sarifw.go  sarifw_test.go
internal/writer/tablew/: doc.go  tablew.go  tablew_test.go  width_internal_test.go
internal/writer/yamlw/: yamlw.go  yamlw_test.go
internal/xio/: xio.go  xio_test.go
pkg/airom/: component.go  domain.go  domain_test.go  inventory.go  risk.go
pkg/airom/detect/: detect.go  detect_test.go  file.go  finding.go  glob.go  index.go
pkg/airom/detectortest/: detectortest.go
pkg/airom/purl/: purl.go  purl_test.go
rules/: rules.go  rules_test.go
rules/datasets/: datasets.yaml
rules/datasets/testdata/datasets/: usage.py
rules/embeddings/: bge-e5.yaml  cohere-embed.yaml  instructor.yaml  openai.yaml  sentence-transformers.yaml  voyage.yaml
rules/embeddings/testdata/bge-e5/: usage.py
rules/embeddings/testdata/cohere-embed/: usage.py
rules/embeddings/testdata/instructor/: usage.py
rules/embeddings/testdata/openai/: usage.py
rules/embeddings/testdata/sentence-transformers/: usage.py
rules/embeddings/testdata/voyage/: usage.py
rules/frameworks/: autogen.yaml  crewai.yaml  dspy.yaml  haystack.yaml  langchain.yaml  llamaindex.yaml  mlflow.yaml  semantic-kernel.yaml  transformers.yaml  vllm.yaml
rules/frameworks/testdata/autogen/: usage.py
rules/frameworks/testdata/crewai/: usage.py
rules/frameworks/testdata/dspy/: usage.py
rules/frameworks/testdata/haystack/: usage.py
rules/frameworks/testdata/langchain/: usage.py  usage.ts
rules/infra/: azureml.yaml  inference-endpoints.yaml  ollama.yaml  rayserve.yaml  sagemaker.yaml  tgi.yaml  vertex.yaml  vllm.yaml
rules/models/: anthropic.yaml  azure-openai.yaml  bedrock.yaml  cohere.yaml  gemini.yaml  groq.yaml  huggingface.yaml  mistral.yaml  ollama.yaml  openai.yaml
rules/params/: aiconfig.yaml
rules/prompts/: prompts.yaml
rules/vectordb/: chroma.yaml  elastic-vector.yaml  faiss.yaml  milvus.yaml  mongodb-atlas.yaml  pgvector.yaml  pinecone.yaml  qdrant.yaml  redis-vector.yaml  weaviate.yaml
sdk/python/: .gitignore  README.md  hatch_build.py  pyproject.toml
sdk/python/src/airom/: __init__.py  _binary.py  _run.py  api.py  errors.py  models.py
sdk/python/tests/: conftest.py  test_models.py  test_scan.py
tools/detectors-gen/: main.go
(+108 files in other folders)
