[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "airom"
dynamic = ["version"]
description = "Python SDK for AIROM — the open-source AI Bill of Materials (AIBOM) scanner"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "AIROM Authors" }]
keywords = ["aibom", "sbom", "ai", "security", "cyclonedx", "sarif", "supply-chain"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: Software Development :: Quality Assurance",
  "Typing :: Typed",
]
# Deliberately dependency-free: the SDK is a typed wrapper over a static binary.
dependencies = []

[project.urls]
Homepage = "https://github.com/airomhq/airom"
Documentation = "https://github.com/airomhq/airom/tree/main/docs-site"
Source = "https://github.com/airomhq/airom"
Issues = "https://github.com/airomhq/airom/issues"

[project.optional-dependencies]
# `build` is a TEST dependency, not just a release tool: test_wheel_puts_airom_on_path
# and test_bundled_binary_is_version_stamped shell out to `python -m build` to
# assert the packaging contract. Without it here, `pip install -e ".[dev]" &&
# pytest` fails on a machine that happens not to have build installed — which is
# exactly what CI is.
dev = ["pytest>=7", "mypy>=1.8", "ruff>=0.5", "build>=1"]

[tool.hatch.version]
path = "src/airom/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/airom"]
# hatch_build.py compiles the binary and installs it as a SCRIPT (into the
# environment's bin/), not as package data — so `pip install airom` gives you a
# real `airom` command on PATH as well as the importable library.

[tool.hatch.build.targets.sdist]
# The sdist carries no binary — installing from it falls back to $AIROM_BINARY
# or `airom` on PATH.
exclude = ["build", "src/airom/_bin"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
packages = ["airom"]
mypy_path = "src"
strict = true
warn_unused_ignores = false
