[package]
name = "demo"
version = "0.1.0"
edition = "2021"

[dependencies]
async-openai = "0.23"
tokio = { version = "1", features = ["full"] }
qdrant-client = { version = "1.9", features = ["download_snapshots"] }
serde = "1.0"
tokenizers = "0.19"
candle-core = { git = "https://github.com/huggingface/candle" }

[dev-dependencies]
langchain-rust = "4.0"
