[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo-app"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.30.0",
    "langchain-core==0.2.5",
    "requests>=2.31",
    "llama-index>=0.10.0",
    "numpy",
    "chromadb[all]>=0.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "anthropic>=0.25.0"]
