[tool.poetry]
name = "demo"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.30.0"
anthropic = { version = "^0.25.0", optional = true }
requests = "^2.31"
qdrant-client = "1.9.0"
langchain = "^0.2.0"
transformers = { version = ">=4.40", extras = ["torch"] }
mypackage = { path = "../mypackage" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
mistralai = "^1.0.0"
